# Robust-Learning-Augmented-Routing-on-Real-Road-Networks

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  LICENSE  LIMITATIONS.md  Makefile  README.md  ROAR_ClaudeCode_Build_Prompts.md  ROAR_Research_Blueprint.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
experiments/configs/: data.yaml  exp_ablation_feature.yaml  exp_ablation_guard.yaml  exp_ablation_lambda_mode.yaml  exp_ablation_lambda_sweep.yaml  exp_consistency_sweep.yaml  exp_lambda_sweep_degraded_sigma_0.5.yaml  exp_lambda_sweep_degraded_sigma_1.0.yaml  exp_lambda_sweep_degraded_sigma_2.0.yaml  exp_robustness_sweep.yaml  exp_smoothness_sweep.yaml  experiments.yaml  predictor.yaml  query_set.yaml
results/figures/: fig1_money_plot.csv  fig2_pareto_front.csv  (+7 more)
roar/: __init__.py
roar/api/: app.py
tests/: robust_astar_fixtures.py  routing_fixtures.py  test_api.py  test_eval_harness_determinism.py  test_eval_stats.py  test_features_leakage.py  test_graph.py  test_materialized_lightgbm.py  test_placeholder.py  test_predictor_interface.py  test_predictor_serialization.py  test_predictor_temporal_split.py  test_robust_astar_consistency.py  test_robust_astar_lambda_modes.py  test_robust_astar_monotonicity.py  test_robust_astar_robustness.py  test_robustness_guard.py  test_routing_aware_adversarial.py  test_routing_baselines_bidirectional.py  test_routing_baselines_correctness.py  test_routing_fairness.py  test_routing_graph.py  test_routing_pure_ml_astar.py  test_sensor_mapping.py
(+27 files in other folders)
