[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roar"
version = "0.0.1"
description = "Robust Learning-Augmented Routing on Real Road Networks"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "ROAR project" }]

[tool.setuptools.packages.find]
include = ["roar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["roar", "tests", "demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
